<resources>
    <string name="app_name">Fluper</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Dashboard-->
    <string name="create_product">Create Product</string>
    <string name="show_product">Show Products</string>
    <string name="search_products">Search products</string>
    <string name="product_list"> Products </string>
    <string name="product_detail"> Product Detail</string>
    <string name="edit_product"> Edit Product</string>
    <string name="update"> Update</string>

    <!--    warning-->
    <string name="no_products">No Products Available</string>
    <string name="all_products_added"> All products are added to the database</string>
    <string name="invalid_name">Invalid product name</string>
    <string name="invalid_description"> Invalid description</string>
    <string name="invalid_price"> Invalid price</string>

    <!--    hint-->
    <string name="enter_name"> Enter product name</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_price"> Enter price</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

<!--    success-->
    <string name="product_updated">Product updated successfully</string>
</resources>