<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.EditFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ab_top"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top_icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:padding="5dp"
                android:background="@drawable/round_ripple_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/img_back"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="18dp"
                android:fontFamily="@font/gotham_ssm_book"
                android:textColor="@color/black"
                android:text="@string/edit_product"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <include
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:id="@+id/line"
        android:layout_marginBottom="15dp"
        app:layout_constraintTop_toBottomOf="@+id/ab_top"
        layout="@layout/item_drop_shadow_black"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20dp"
        android:hint="@string/enter_name"
        android:textColorHint="@color/grey"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/gotham_ssm_bold"
        tools:text="Samsugn"/>

    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:hint="@string/enter_description"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:fontFamily="@font/gotham_ssm_book"
        tools:text="Samsugn"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/et_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:focusable="false"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/gotham_ssm_book"
            tools:text="Samsugn"/>

        <EditText
            android:id="@+id/et_sale_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:hint="@string/enter_price"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_rupee"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/gotham_ssm_book"
            tools:text="Samsugn"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="100"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="70"
            android:foreground="@drawable/selectable_item_background"
            android:background="@drawable/bg_edge_curved_red_filled"
            android:clickable="true"
            android:fontFamily="@font/gotham_ssm_bold"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:focusable="true" />

    </LinearLayout>


</LinearLayout>